# Overstride

./: .env.example  .gitignore  README.md  pyproject.toml
data/: README.md
models/: README.md  stage2_logistic_coeffs.json  stage2_validation_report.md
notebooks/: README.md
scripts/: README.md  _colab_diag_detection.py  compare_person_detectors.py  download_aspset_sample.py  download_dataset1.py  run_stage2_calibration.py  score_week.py  validate_pose_accuracy.py  validate_pose_accuracy_batch.py
src/overstride/baseline/: mahalanobis.py  welford.py
src/overstride/biomechanics/: score.py
src/overstride/ingest/: aggregate.py  schema.py
src/overstride/pose/: camera.py  extract.py  kinematics.py  track.py
src/overstride/risk/: calibration.py  score.py
tests/: test_aggregate.py  test_biomechanics_score.py  test_camera.py  test_extract.py  test_kinematics.py  test_mahalanobis.py  test_schema.py  test_score.py  test_smoke.py  test_track.py  test_welford.py
