[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "overstride"
version = "0.1.0"
description = "Injury-risk anomaly detection for runners"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
]

[project.optional-dependencies]
cv = [
    "mediapipe<0.10.31",  # 0.10.31+ broke mp.solutions.pose (upstream regression, google-ai-edge/mediapipe#6200 et al.)
    "ultralytics",
    "opencv-python",
    "supervision<0.30",  # ByteTrack (used as-is) is slated for removal in 0.30
    "ezc3d",
]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
